# RepoSentinel

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: example_rules.yaml
core/: github_api.py  logger.py  scanner.py
reports/: reporter.py
rules/: patterns.py  sensitive_files.py
scripts/: publish_public.ps1  setup.sh
src/: config.py  main.py
src/core/: github_api.py  logger.py  scanner.py
src/reports/: reporter.py
src/rules/: custom_rules.yaml  patterns.py  sensitive_files.py
tests/: __init__.py  test_github_api.py  test_main.py  test_scanner.py
